# aws-s3-tar-tool-helper

./: .gitignore  .pre-commit-config.yaml  README.md  download-s3tar.sh  pyproject.toml
src/s3_tar_helper/: create_s3_manifest.py  run_s3tar.py
