[project]
name = "aws-s3tar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[project.scripts]
create-s3_manifests = "src.s3_tar_helper.create_manifests:main"
run-s3tar = "src.s3_tar_helper.run_s3tar:main"
