[project]
name = "aws-s3-tar-helper"
version = "0.1.0"
description = "Helper project for working with amazon-s3-tar-tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.45",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
]

[project.scripts]
create-manifest = "s3_tar_helper.create_s3_manifest:main"
run-s3tar = "s3_tar_helper.run_s3tar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_tar_helper"]
